deployment.yml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: mysql-deployment
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudtest-deployment
  labels:
    app: crudtest
spec:
  replicas: 1
  selector:
      matchLabels:
        app: crudtest
  template:
    metadata:
      labels:
        app: crudtest
    spec:
      containers:
      - name: crudtest
        image: host.minikube.internal:5000/crudtest
        imagePullPolicy: Always
