service.yml
apiVersion: v1
kind: Service
metadata:
  name: mysql-service
spec:
  ports:
  - port: 3306
  selector:
    app: mysql
---
apiVersion: v1
kind: Service
metadata:
    name: crudtest-service
    labels:
      app: crudtest
spec:
    selector:
        app: crudtest
    ports:
        - port: 8080
          protocol: TCP
          targetPort: 8080
    type: NodePort
